--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -33,7 +33,7 @@
           </div>
 
           <div class="member">
-            <!--  student 01 -->
+            <p>Yayu Zhu</p>
 
           </div>
 
