--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -33,6 +33,7 @@
           </div>
 
           <div class="member">
+            <p><img class="member-pic" src="img/yz.png"></p>
             <p>Yayu Zhu</p>
 
           </div>
