--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -34,7 +34,9 @@
 
           <div class="member">
             <p><img class="member-pic" src="img/yz.jpg"></p>
-            <p>Yayu Zhu</p>
+            <a href="yayuz.html">
+              <p>Yayu Zhu</p>
+            </a>
 
           </div>
 
