--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -25,6 +25,8 @@
             <p><button id="oak">Oak</button></p>
             <p><button id="beech">Beech</button></p>
             <p><button id="pine">Pine</button></p>
+            <p><button id="magnolia">Magnolia</button></p>
+
 
         </div>
         <div class="content">
@@ -58,6 +60,10 @@
         $("#pine").click(function(){
             $("#i_content").attr("src","pine_content.html");
             $("#i_summary").attr("src","pine_summary.html");
+        })
+        $("#magnolia").click(function(){
+            $("#i_content").attr("src","magnolia_content.html");
+            $("#i_summary").attr("src","magnolia_summary.html");
         })
 
         /* This will not be merged !  */
